updated controls on html page

--- a/controlDrone/index.html
+++ b/controlDrone/index.html
@@ -10,15 +10,17 @@
 <div id="droneStream" style="width: 640px; height: 360px; margin: auto;">   </div>
 
 <div id="controls">
-  <h1>controls</h1>
+  <h1>controls:</h1>
+  <h3>Recommended to have both hands on keyboard, using WASD controls.</h3>
   <ul>
     <li>Up: Space</li>
-
     <li>Down: Shift</li>
     <li>Forward: W/Up Arrow</li>
     <li>Back: S/Down Arrow</li>
     <li>Turn Left: A/ Left Arrow</li>
     <li>Turn Right: D/Right Arrow</li>
+    <li>Fly Left: K</li>
+    <li>Fly Right: L</li>
     <li>Takeoff/land: E</li>
   </ul>
 </div>
